--- a/package.json
+++ b/package.json
@@ -35,16 +35,16 @@
     "reflect-metadata": "^0.1.9"
   },
   "devDependencies": {
-    "@types/chai": "^3.5.1",
-    "@types/mocha": "^2.2.41",
-    "chai": "^3.5.0",
-    "copy": "^0.3.0",
-    "mocha": "^3.2.0",
-    "mocha-typescript": "^1.0.23",
-    "rimraf": "^2.6.1",
-    "serve": "^5.1.4",
-    "systemjs": "^0.20.12",
-    "typedoc": "^0.5.10",
-    "typescript": "^2.3.0"
+    "@types/chai": "3.5.1",
+    "@types/mocha": "2.2.41",
+    "chai": "3.5.0",
+    "copy": "0.3.0",
+    "mocha": "3.2.0",
+    "mocha-typescript": "1.0.23",
+    "rimraf": "2.6.1",
+    "serve": "5.1.4",
+    "systemjs": "0.20.12",
+    "typedoc": "0.5.10",
+    "typescript": "2.3.0"
   }
 }
