--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,15 +1,16 @@
 {
   "compilerOptions": {
-    "target": "es6",
+    "target": "es5",
+    "module": "commonjs",
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "preserveConstEnums": true,
-    "module": "es2015",
     "moduleResolution": "node",
     "removeComments": false,
     "sourceMap": false,
     "declaration": true,
-    "outDir": "dist"
+    "outDir": "dist",
+    "lib": ["es2015", "dom"]
   },
   "files": [
     "./index.ts"
