--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "clean": "rimraf src/**/*.d.ts src/**/*.js src/**/*js.map test/**/*.d.ts test/**/*.js test/**/*js.map index.d.ts index.js index.js.map"
   },
   "main": "index.js",
+  "license": "MIT",
   "contributors": [
     {
       "name": "Jānis Radiņš",
