--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "build:minor": "npm run test && npm run export && npm version minor && copy package.json dist && npm publish dist",
     "build:major": "npm run test && npm run export && npm version major && copy package.json dist && npm publish dist",
     "test": "tsc -p tsconfig-test.json && mocha && npm run clean",
+    "testWithCoverage": "tsc -p tsconfig-test.json && npm run coverage && npm run clean",
+    "coverage": "istanbul cover ./node_modules/mocha/bin/_mocha --report lcovonly -- -R spec && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js && rm -rf ./coverage",
     "docs": "typedoc --out docs src --mode file --excludePrivate --hideGenerator --name Quiver-Framework",
     "clean": "rimraf src/**/*.d.ts src/**/*.js src/**/*js.map test/**/*.d.ts test/**/*.js test/**/*js.map index.d.ts index.js index.js.map"
   },
@@ -43,7 +45,10 @@
     "@types/mocha": "2.2.41",
     "chai": "3.5.0",
     "copy": "0.3.0",
+    "coveralls": "^2.13.1",
+    "istanbul": "^0.4.5",
     "mocha": "3.3.0",
+    "mocha-lcov-reporter": "^1.3.0",
     "mocha-typescript": "1.0.23",
     "rimraf": "2.6.1",
     "serve": "5.1.5",
