--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "build:patch": "npm run test && npm run export && npm version patch && copy package.json dist && npm publish dist",
     "build:minor": "npm run test && npm run export && npm version minor && copy package.json dist && npm publish dist",
     "build:major": "npm run test && npm run export && npm version major && copy package.json dist && npm publish dist",
-    "test": "tsc -p tsconfig-test.json && nyc mocha && nyc report --reporter=json && codecov -f coverage/*.json && npm run clean",
+    "transpileTest": "tsc -p tsconfig-test.json",
+    "test": "npm run transpileTest && nyc mocha && nyc report --reporter=json",
+    "posttest": "codecov -f coverage/*.json",
+    "localTest": "npm run transpileTest && nyc mocha && npm run clean",
     "docs": "typedoc --out docs src --mode file --excludePrivate --hideGenerator --name Quiver-Framework",
     "clean": "rimraf src/**/*.d.ts src/**/*.js src/**/*js.map test/**/*.d.ts test/**/*.js test/**/*js.map index.d.ts index.js index.js.map"
   },
