Builds shouldn't require Code coverage reports

--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
     "start": "serve",
     "export": "rimraf dist && tsc && copy readme.md dist",
     "build": "npm run build:patch",
-    "build:patch": "npm run test && npm run export && npm version patch && copy package.json dist && npm publish dist",
-    "build:minor": "npm run test && npm run export && npm version minor && copy package.json dist && npm publish dist",
-    "build:major": "npm run test && npm run export && npm version major && copy package.json dist && npm publish dist",
+    "build:patch": "npm run localTest && npm run export && npm version patch && copy package.json dist && npm publish dist",
+    "build:minor": "npm run localTest && npm run export && npm version minor && copy package.json dist && npm publish dist",
+    "build:major": "npm run localTest && npm run export && npm version major && copy package.json dist && npm publish dist",
     "transpileTest": "tsc -p tsconfig-test.json",
     "test": "npm run transpileTest && nyc mocha && nyc report --reporter=json",
     "posttest": "codecov -f coverage/*.json",
