--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.5.3",
   "scripts": {
     "start": "serve",
-    "export": "rimraf dist && tsc && copy readme.md dist",
+    "export": "rimraf dist && tsc && copy README.md dist",
     "build": "npm run build:patch",
     "build:patch": "npm run localTest && npm run export && npm version patch && copy package.json dist && npm publish dist",
     "build:minor": "npm run localTest && npm run export && npm version minor && copy package.json dist && npm publish dist",
