--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "build:patch": "npm run localTest && npm run export && npm version patch && copy package.json dist && npm publish dist",
     "build:minor": "npm run localTest && npm run export && npm version minor && copy package.json dist && npm publish dist",
     "build:major": "npm run localTest && npm run export && npm version major && copy package.json dist && npm publish dist",
+
+    "build:dev": "npm run localTest && npm run export && copy package.json dist && npm --tag dev",
+
     "transpileTest": "tsc -p test/tsconfig.json",
     "test": "npm run transpileTest && nyc mocha && nyc report --reporter=json",
     "posttest": "codecov -f coverage/*.json",
