--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "quiver-framework",
   "description": "Lightweight micro framework for TypeScript/JavaScript",
-  "version": "0.7.2-0",
+  "version": "0.8.0",
   "scripts": {
     "start": "serve",
     "export": "rimraf dist && tsc && copy README.md dist",
